// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app
// Or, view in VSCode with extension: "DBML Live Preview"

Project DBML {
  Note: '''
Department: Table to store department details.
Personnel: Table to store personnel details.
Feedback: Table to store feedback given by personnel for projects.
Project: Table to store project details.
JobRole: Table to store job role details.
Meeting: Table to store meeting details.
PersonnelSkill: Table to store skills associated with personnel.
Skill: Table to store skill details.
PersonnelTraining: Table to link personnel with their trainings.
Training: Table to store details about training programs.
ProjectAssignment: Table to store project assignments.
RoleSkillRequirement: Table to store skill requirements for a job role.
'''
}

Table Department {
    id INTEGER [primary key]
    name VARCHAR(100) 
    head INTEGER 
    }

Table Personnel {
    id INTEGER [primary key]
    first_name VARCHAR(100) 
    last_name VARCHAR(100) 
    email VARCHAR(100) 
    phone_number VARCHAR(50) 
    }

Table Feedback {
    id INTEGER [primary key]
    personnel_id INTEGER 
    project_id INTEGER 
    feedback_note VARCHAR(500) 
    }

Table Project {
    id INTEGER [primary key]
    name VARCHAR(100) 
    start_date DATE 
    end_date DATE 
    }

Table JobRole {
    id INTEGER [primary key]
    title VARCHAR(100) 
    description VARCHAR(250) 
    }

Table Meeting {
    id INTEGER [primary key]
    date DATETIME 
    description VARCHAR(250) 
    }

Table PersonnelSkill {
    id INTEGER [primary key]
    personnel_id INTEGER 
    skill_id INTEGER 
    proficiency_level VARCHAR(50) 
    }

Table Skill {
    id INTEGER [primary key]
    name VARCHAR(100) 
    description VARCHAR(250) 
    }

Table PersonnelTraining {
    id INTEGER [primary key]
    personnel_id INTEGER 
    training_id INTEGER 
    date_completed DATE 
    }

Table Training {
    id INTEGER [primary key]
    name VARCHAR(100) 
    description VARCHAR(250) 
    date_provided DATE 
    }

Table ProjectAssignment {
    id INTEGER [primary key]
    personnel_id INTEGER 
    project_id INTEGER 
    role VARCHAR(100) 
    }

Table RoleSkillRequirement {
    id INTEGER [primary key]
    job_role_id INTEGER 
    skill_id INTEGER 
    level_required VARCHAR(50) 
    }



// Relationships
    Ref: Department.(head) < Personnel.(id)
    Ref: Feedback.(personnel_id) < Personnel.(id)
    Ref: Feedback.(project_id) < Project.(id)
    Ref: PersonnelSkill.(personnel_id) < Personnel.(id)
    Ref: PersonnelSkill.(skill_id) < Skill.(id)
    Ref: PersonnelTraining.(personnel_id) < Personnel.(id)
    Ref: PersonnelTraining.(training_id) < Training.(id)
    Ref: ProjectAssignment.(personnel_id) < Personnel.(id)
    Ref: ProjectAssignment.(project_id) < Project.(id)
    Ref: RoleSkillRequirement.(job_role_id) < JobRole.(id)
    Ref: RoleSkillRequirement.(skill_id) < Skill.(id)
